--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 </head>
 <body>
 <section class="hero">
-    <h1>¡Juga con el Duende Verde y obtene premios increíbles, ya disponible en Ganemos.net!</h1>
+    <h1>¡Juga con el Duende y obtene premios increíbles, ya disponible en Ganemos.net!</h1>
     <h2>¡Sin cronograma De Pago! Las 24 hs a tu servicio</h2>
 
     <div style="margin-top: 30px; text-align: center;">
