--- a/index.html
+++ b/index.html
@@ -135,12 +135,12 @@
   t.src=v;s=b.getElementsByTagName(e)[0];
   s.parentNode.insertBefore(t,s)}(window, document,'script',
   'https://connect.facebook.net/en_US/fbevents.js');
-  fbq('init', '1965637884366086'); 
+  fbq('init', '1206535698320243'); 
   fbq('track', 'PageView');
 </script>
 <noscript>
   <img height="1" width="1" style="display:none"
-       src="https://www.facebook.com/tr?id=1965637884366086&ev=PageView&noscript=1"/>
+       src="https://www.facebook.com/tr?id=1206535698320243&ev=PageView&noscript=1"/>
 </noscript>
 <!-- End Meta Pixel Code -->
 
@@ -156,7 +156,7 @@
            id="whatsapp-button"
            class="cta-button" 
            target="_blank" 
-           onclick="fbq('trackCustom', 'WhatsAppClick')">
+           onclick="fbq('track', 'Purchase', { value: 1000.00, currency: 'ARS' })">
             <i class='fab fa-whatsapp'></i> ¡Crea tu usuario!
         </a>
     </div>
